# ssc

./: .gitignore  LICENSE  README.md  pyproject.toml  test_stacked_violin.py  text_customization_example.py
.build-env/: pyvenv.cfg
examples/: basic_usage.py
src/ssc/: __init__.py
src/ssc/plotting/: __init__.py  split_effects_helper.py  stacked_violin.py  violin.py
