[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssc-python"
version = "0.1.0"
description = "Signaling Single Cell - Visualizations for single-cell RNA sequencing data"
authors = [
    {name = "Wei-Che Ko", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scanpy>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ssc"
"Bug Reports" = "https://github.com/yourusername/ssc/issues"
"Source" = "https://github.com/yourusername/ssc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"